k8s-apps/media/overseerr/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: argocd
