k8s-apps/media/overseerr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/managed-by: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - overseerr.corp.mulliken.net
      secretName: overseerr-tls
  rules:
    - host: overseerr.corp.mulliken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
